--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^9.0.2",
     "intersection-observer-react": "^1.2.0",
     "prop-types": "^15.8.1",
